--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               </div>
               <div class="project__actions">
                 <button class="project__button" data-target="01">detail</button>
-                <a href="https://younga298.github.io/youngah-portfolio/" target="_blank" class="project__link">보러가기</a>
+                <a href="https://younga298.github.io/project1/" target="_blank" class="project__link">보러가기</a>
               </div>
             </li>
           </ul>
@@ -190,7 +190,7 @@
               </div>
               <div class="project__actions">
                 <button class="project__button" data-target="1">detail</button>
-                <a href="https://younga298.github.io/youngah-portfolio/" target="_blank" class="project__link">보러가기</a>
+                <a href="https://younga298.github.io/project-2/" target="_blank" class="project__link">보러가기</a>
               </div>
             </li>
           </ul>
@@ -229,7 +229,8 @@
               </div>
               <div class="project__actions">
                 <button class="project__button" data-target="2">detail</button>
-                <a href="https://younga298.github.io/beattltude/" target="_blank" class="project__link">보러가기</a>
+                <a href="https://younga298.github.io/project-3/" target="_blank" class="project__link">보러가기</a>
+                <!-- 404page error 수정해야함 -->
               </div>
             </li>
           </ul>
@@ -266,7 +267,7 @@
               </div>
               <div class="project__actions">
                 <button class="project__button" data-target="3">detail</button>
-                <a href="https://younga298.github.io/project4/" target="_blank" class="project__link">보러가기</a>
+                <a href=" https://younga298.github.io/project-4/" target="_blank" class="project__link">보러가기</a>
               </div>
             </li>
           </ul>
@@ -340,7 +341,8 @@
               </div>
               <div class="project__actions">
                 <button class="project__button" data-target="5">Detail</button>
-                <a href="https://younga298.github.io/project2/" target="_blank" class="project__link">보러가기</a>
+                <a href="https://younga298.github.io/project-6/index.html" target="_blank"
+                  class="project__link">보러가기</a>
               </div>
             </li>
           </ul>
@@ -376,7 +378,7 @@
               </div>
               <div class="project__actions">
                 <button class="project__button" data-target="6">Detail</button>
-                <a href="https://younga298.github.io/project_1/" target="_blank" class="project__link">보러가기</a>
+                <a href="https://younga298.github.io/project-7/" target="_blank" class="project__link">보러가기</a>
               </div>
             </li>
           </ul>
