--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="home__text-box">
         <div class="home__text-parent">
           <p class="home__text home__text--color-blue">YoungAh<span class="font">'s</span></p>
-          <p class="home__text home__text--color-yellow">&nbsp;2024</p>
+          <p class="home__text home__text--color-yellow">&nbsp;2025</p>
         </div>
         <div class="home__text-sub">
           PORTFOLIO
@@ -133,7 +133,7 @@
           <h1 class="point-font">work</h1>
           <div class="project__info">
             <p class="project__number">project#1</p>
-            <p class="project__type">반응형 페이지</p>
+            <p class="project__type">반응형 사이트</p>
             <p class="project__separator"></p>
             <p class="project__name">삼양라운드</p>
           </div>
@@ -150,8 +150,8 @@
             </li>
             <li class="project__item project__item--details">
               <div class="project__description">
-                <h3 class="project__description--title">반응형 페이지</h3>
-                <p class="project__description--text">6개월간의 교육과정을 통해 제작된 웹사이트를 소개하는 첫번째 포트폴리오 입니다.</p>
+                <h3 class="project__description--title">삼양라운드</h3>
+                <p class="project__description--text">제발 오늘수정 완성제발</p>
 
               </div>
               <div class="project__actions">
@@ -168,8 +168,8 @@
         <div class="project__header">
           <h1 class="point-font"></h1>
           <div class="project__info">
-            <p class="project__number">project#1</p>
-            <p class="project__type">PORTFOLIO</p>
+            <p class="project__number">project#2</p>
+            <p class="project__type">2024 PORTFOLIO</p>
             <p class="project__separator"></p>
             <p class="project__name">국비 교육 포트폴리오</p>
           </div>
@@ -190,7 +190,8 @@
               </div>
               <div class="project__actions">
                 <button class="project__button" data-target="1">detail</button>
-                <a href="https://younga298.github.io/project-2/" target="_blank" class="project__link">보러가기</a>
+                <a href=" https://younga298.github.io/-2024-kimyounga_portfolio/" target="_blank"
+                  class="project__link">보러가기</a>
               </div>
             </li>
           </ul>
@@ -202,8 +203,8 @@
         <div class="project__header">
           <h1 class="point-font"></h1>
           <div class="project__info">
-            <p class="project__number">project#2</p>
-            <p class="project__type">편집샵 페이지</p>
+            <p class="project__number">project#3</p>
+            <p class="project__type">react 사이트</p>
             <p class="project__separator"></p>
             <p class="project__name">BEATTITUDE</p>
           </div>
@@ -241,8 +242,8 @@
         <div class="project__header">
           <h1 class="point-font"></h1>
           <div class="project__info">
-            <p class="project__number">project#3</p>
-            <p class="project__type">도서 웹사이트</p>
+            <p class="project__number">project#4</p>
+            <p class="project__type">Open API 사이트</p>
             <p class="project__separator"></p>
             <p class="project__name">밀리의 서재</p>
           </div>
@@ -278,10 +279,10 @@
         <div class="project__header">
           <h1 class="point-font"></h1>
           <div class="project__info">
-            <p class="project__number">project#4</p>
+            <p class="project__number">project#5</p>
             <p class="project__type">팀 협동 사이트</p>
             <p class="project__separator"></p>
-            <p class="project__name">여행 관광 사이트</p>
+            <p class="project__name">연똑이</p>
           </div>
         </div>
         <div class="project__content">
@@ -294,7 +295,7 @@
             </li>
             <li class="project__item project__item--details">
               <div class="project__description">
-                <h3 class="project__description--title">여행 관광 사이트</h3>
+                <h3 class="project__description--title">연똑이</h3>
                 <p class="project__description--text">일본여행 소개를 주제로<b>HTML,CSS</b>를 이용하여 작업하였습니다.
                   서브페이지의 슬라이더 부분과 반응형, 팝업창설정을 작업하였습니다.
                   효과는 <b>JQUERY와 CSS 라이브러리</b>로 주었습니다. 이번 작업은 팀 프로젝트이니 만큼 다른 팀원들과의 협업과, 다른 팀원들의 작업물 사이의 조화를 염두에 두고
@@ -317,8 +318,8 @@
         <div class="project__header">
           <h1 class="point-font"></h1>
           <div class="project__info">
-            <p class="project__number">project#5</p>
-            <p class="project__type">반응형 웹 사이트</p>
+            <p class="project__number">project#6</p>
+            <p class="project__type">반응형 사이트</p>
             <p class="project__separator"></p>
             <p class="project__name">GHIBLI 스튜디오</p>
           </div>
@@ -333,7 +334,7 @@
             </li>
             <li class="project__item project__item--details">
               <div class="project__description">
-                <h3 class="project__description--title">지브리 사이트</h3>
+                <h3 class="project__description--title">GHIBLI 스튜디오</h3>
                 <p class="project__description--text">지브리스튜디오를 주제로<b>HTML,CSS</b>를 이용하여 <b>반응형</b>으로 작업하였습니다.
                   지브리스튜디오 작품과 등장인물들에 알아가는 형식으로 제작하였으며,<b>JQUERY</b>를 이용하여 효과를주었습니다.
                   이번 작업에서는 스크롤 이벤트를 메인으로 작업했습니다.
@@ -356,7 +357,7 @@
             <p class="project__number">project#6</p>
             <p class="project__type">웹 표준 사이트</p>
             <p class="project__separator"></p>
-            <p class="project__name">소품샵 사이트</p>
+            <p class="project__name">The Ceramics</p>
           </div>
         </div>
         <div class="project__content">
@@ -369,7 +370,7 @@
             </li>
             <li class="project__item project__item--details">
               <div class="project__description">
-                <h3 class="project__description--title">소품샵 사이트</h3>
+                <h3 class="project__description--title">The Ceramics</h3>
                 <p class="project__description--text">첫번째 프로젝트로, 소품샵 사이트를 주제로 하여 <b>HTML, CSS, 포토샵/일러스트</b>만을 사용하여
                   만들었습니다.
                   기초적인 <b>CSS와 HOVER</b>효과로 표현하였습니다.
@@ -930,7 +931,7 @@
             <li class="resume__skill">
               <div class="resume__skill-box">
                 <h3 class="resume__skill-title"><i class="fas fa-tablet-alt"></i> Mobile Design</h3>
-                <p class="resume__skill-description">HTML / CSS / JAVA SCRIPT / JQUERY / resPONSIVE DESIGN</p>
+                <p class="resume__skill-description">HTML / CSS / JAVA SCRIPT / JQUERY / RESPONSIVE DESIGN</p>
               </div>
             </li>
           </ul>
