--- a/index.html
+++ b/index.html
@@ -151,7 +151,10 @@
             <li class="project__item project__item--details">
               <div class="project__description">
                 <h3 class="project__description--title">삼양라운드</h3>
-                <p class="project__description--text">제발 오늘수정 완성제발</p>
+                <p class="project__description--text">삼양라운드 홈페이지를 클론코딩한 페이지 입니다. <b>반응형쿼리</b>와
+                  <b>리사이즈 이벤트</b>를 사용하여 웹사이즈 마다 적용되야 하는 css기능들이 중복되지 않게 하며 실시간으로 크기에 따라 레이아웃이 변하는 반응형 웹 제작에 중점을 두고
+                  작업하였습니다.레이아웃은 px보다는 %와같은 상대단위를 사용하여 다양한 화면크기에서 유연하게 대응하도록 작업했습니다.
+                </p>
 
               </div>
               <div class="project__actions">
@@ -421,7 +424,7 @@
 
         <div class="popup__details-info">
           <h3>project</h3>
-          <p>2024.11.01 ~ 11.08</p>
+          <p>2024.12.20 ~ 12.25</p>
           <p>제작인원 :1명</p>
           <p>기여도 100%</p>
         </div>
@@ -439,13 +442,18 @@
         <div class="popup__procedure">
           <h3 class="popup__procedure-title">project PROCEDURE</h3>
           <p class="popup__procedure-description">
-            해당 작업물은 국가훈련을 받으며 처음으로 제작된 페이지입니다.
-            취업을 위해 제작된 클론 코딩 페이지입니다. 주로 HTML,CSS를 사용하여
-            배치를 잡았습니다. 스크롤 넘김 이벤트는 Swiper를 사용하였고
-            그 이외에 기능들은 jQuery와Js를 섞어서 작업했습니다. 처음 제작하는
-            포토폴리오이다 보니 어떤 느낌으로 제작할지 고민하다 심플하고 보기 편한게 좋을거라
-            생각하여 작업했습니다. 제작 자체는 Swiper와 간단한 Jquery의 마우스 클릭 이벤트
-            를 활용하여 제작하다 보니 제작 기간은 짧게 제작되었습니다.
+            프로젝트를 진행하면서 브라우저 창 크기 변경 시 메뉴 상태가 제대로 반영되지 않는 문제가 발생했습니다.
+            if-else 문을 활용해 반응형 쿼리로 jQuery를 구현하여
+            모바일에서는 클릭으로, 데스크탑에서는 마우스 오버로 서브 메뉴가 열리도록 설정했습니다.
+            모바일에서 데스크탑 화면으로 전환할 때 여전히 모바일의 클릭 이벤트가 남아있어 서브 메뉴들을 제대로 볼 수 없는 에러가 발생했고
+            창 크기 변화가 실시간으로 적용되지 않아,
+            새로고침을 해야만 변경 사항이 반영되는 불편함이 있었습니다.
+            그래서 resize 이벤트를 활용하여. 이를 통해 창 크기가 변경될 때마다 관련 클래스를 초기화하고 이벤트를 새롭게 업데이트하도록 설정했습니다.
+            이 접근 방식 으로 화면 크기가 바뀌더라도 메뉴 동작이 일관되게 유지되는 결과를 얻게됬습니다.
+            헤더는 scroll 이벤트와 if-else 문을 활용하여 동작하도록 구현했습니다. 마지막 스크롤 위치와 현재 스크롤 위치를 각각 변수에 저장하고, 스크롤을 내릴 때는 헤더를 숨기고, 스크롤을
+            올릴 때는 헤더가 다시
+            나타나도록 설정했습니다.
+
 
           </p>
         </div>
@@ -508,12 +516,12 @@
           <h3 class="popup__procedure-title">project PROCEDURE</h3>
           <p class="popup__procedure-description">
             해당 작업물은 국가훈련을 받으며 처음으로 제작된 페이지입니다.
-            취업을 위해 제작된 클론 코딩 페이지입니다. 주로 HTML,CSS를 사용하여
-            배치를 잡았습니다. 스크롤 넘김 이벤트는 Swiper를 사용하였고
-            그 이외에 기능들은 jQuery와Js를 섞어서 작업했습니다. 처음 제작하는
-            포토폴리오이다 보니 어떤 느낌으로 제작할지 고민하다 심플하고 보기 편한게 좋을거라
-            생각하여 작업했습니다. 제작 자체는 Swiper와 간단한 Jquery의 마우스 클릭 이벤트
-            를 활용하여 제작하다 보니 제작 기간은 짧게 제작되었습니다.
+            취업을 위해 제작된 포트폴리오 페이지입니다. 주로 HTML,CSS를 사용하여
+            배치를 잡았습니다. scroll 이벤트를 사용해서 lists 요소를 좌우로 이동하게 구현했습니다.
+            폴더 부분은 배열에 각각 호버,비호버 됐을시 적용될 이미지경로를 추가하고
+            this와 find를 활용해 현재 호버된 요소의 부모 인덱스를 기준으로 배열의 값을 가져와 해당 이미지가 보여지게 했습니다.
+            처음 제작하는 포토폴리오이다 보니 어떤 느낌으로 제작할지 고민하다 웹퍼블리셔라는 직종을 반영하여,
+            웹페이지나 컴퓨터 환경을 연상시키는 디자인 컨셉으로 작업했습니다.
 
           </p>
         </div>
@@ -581,7 +589,7 @@
             가져올 수 있도록 만들었고 상세 페이지는 React Router로 각각의 페이지를 만들었습니다.
             처음 하는 React 작업이다 보니 Swiper 에서부터 작업에 문제가 생겼습니다. 그로 인해
             구글에서 검색하여 React Swiper 사용하는 법을 찾아 여러 차례 코드 수정을 하여 성공했고,
-            Redux를 활용하여 상품을 장바구니로 옮기는 가정에서도 많은 문제가 생겼습니다.
+            Redux를 활용하여 상품을 장바구니로 옮기는 과정에서도 많은 문제가 생겼습니다.
             이 부분은 검색해도 어려운 부분이 너무 많아 선생님에게 도움을 받아 해결했습니다.
             이것 말고도 이 페이지에 제작은 많은 어려움을 겪었습니다. 끊임없는 오류가 발생했고
             해결하기 위해 검색 후 다시 코드를 짜고를 무수히 반복했습니다. Js의 이해심이
@@ -647,13 +655,13 @@
         <div class="popup__procedure">
           <h3 class="popup__procedure-title">project PROCEDURE</h3>
           <p class="popup__procedure-description">
-            해당 작업물은 온라인 서점을 주제로 HTML,SCSS를 이용하여 작업하였습니다.
-            도서 정보는 카카오 OPEN API를 통해 가져왔고, 애니메이션 효과는 CSS를 사용하여
-            애니메이션 움직임 값을 설정해서 효과를 주었고 스크롤 이벤트는 Jquery,Js를 사용했습니다.
-            처음 카카오 정보를 가져오는 데에 에러가 생겼고 그걸 해결하기 위해 GPT를 사용하여
-            문제점을 찾았고 여러 차례에 코드 수정으로 정보를 가져오는 데 성공했습니다.
-            유튜브 영상의 경우 유튜브 OPEN API를 통해 영상을 가져와 재생 효과를 주었습니다.
-            이번 작업은 밀리 페이지 홈페이지를 최대한 비슷한 디자인과 효과를 구현하려고 노력하였습니다.
+            해당 작업물은 온라인 서점을 주제로 HTML, CSS를 사용하여 웹 페이지를 구현하는 작업이었습니다.
+            카카오 API를 활용해 다양한 책의 제목에 대한 정보를 가져와, 이를 HTML 요소에 반영했습니다.
+            각 리스트 배열에 담긴 책 제목을 하나씩 API에 전달하여 결과를 받아왔고,
+            $.ajax 메서드를 사용해 API 요청을 보냈습니다. 응답받은 데이터에서는
+            책의 썸네일, 제목, 저자 정보를 받아와서 화면에 보여줄 수 있도록 했습니다.
+            반복적인 작업을 위해 for 문을 사용하여 배열의 각 요소에 대해 API 요청을 보내어
+            데이터를 화면에 보여지게 구현했습니다.
 
           </p>
         </div>
@@ -712,13 +720,13 @@
         <div class="popup__procedure">
           <h3 class="popup__procedure-title">project PROCEDURE</h3>
           <p class="popup__procedure-description">
-            해당 작업물은 일본 각 지역 행사를 소개주제로 HTML,CSS를 이용하여 작업하였습니다.
-            서브페이지의 슬라이더 부분과 반응형, 팝업창설정을 담당하였습니다.
-            이번 작업에서 Swiper를 처음 사용한 페이지로 라이브러리를 사용하는 쪽에서 문제가 많았습니다.
-            슬라이드가 안 움직이는 현상부터 타임에 맞춰 넘어가는 기능 및 구조를 맞추는데 시간이 걸렸습니다.
-            주로 해결은 유튜브 검색 및 구글 검색하여 해결했고 JS 같은 경우는 너무 미숙하여 jQuery를 주로
-            사용했습니다. 이번 작업에서는 팀원들과 협업을 통한 작업을 중점으로 작업하였습니다.
-
+            해당 작업물은 일본 각 지역 행사를 소개주제로 서브페이지의 슬라이더 부분과 반응형, 팝업창설정을 담당하였습니다.
+            화면 첫번째 슬라이더에서는 2500ms로 설정하고,두 번째 슬라이더에서는 3500ms로 설정하여
+            두 슬라이더가 동시에 넘어가지 않도록 구현했습니다.
+            또한, 반응형을 적용하는 과정에서 breakpoints 설정을 통해 화면 크기에 맞는 슬라이드 개수를 다르게 조정했습니다.
+            이번 작업에서는 각각 다른 페이지를 작업하고 병합하는거다 보니
+            전체적인 디자인을 일관성 있게하여 하나의 사이트처럼 보여지게 하였고
+            팀원들과의 적극적인 소통과 회의를 통한 조율을 하며 협업을 배울수 있는 기회을 얻게되었었습니다.
           </p>
         </div>
 
@@ -779,12 +787,13 @@
         <div class="popup__procedure">
           <h3 class="popup__procedure-title">project PROCEDURE</h3>
           <p class="popup__procedure-description">
-            해당 작업물은 지브리스튜디오를 주제로 HTML,CSS를 이용하여 반응형으로 작업하였습니다.
-            스튜디오지브리 사이트를 참고하여 제작하였으며, jQuery와 JS를 최대한 이용해 효과를 주었습니다.
-            이번 작업에서는 스크롤 이벤트를 활용하였고, 애니메이션도 추가하여 재밌게 보일 수 있도록 노력하였습니다.
-            스크롤 이벤트는 처음 작업하는 거라 스크롤 위치 값을 맞추는 데 어려움이 많았고 선생님의 도움을
-            받으면서 해결했습니다.
-
+            해당 작업물은 지브리스튜디오를 주제로 HTML,CSSjQuery를 이용하여 반응형으로 작업하였습니다.
+            카드 네비게이션으로 버튼을 클릭하면 특정 카드를 보여주고 나머지는 숨기는 기능을 사용했습니다.
+            카드는 transform-style: preserve-3d와 rotateY(180deg)을 사용하여 3d로 회전하며 뒷면이 보이도록 구현했습니다.
+            동적인 애니메이션을 구현하고 싶어서 스크롤 위치를 추적하고, 각 요소가 화면에 가까워지면 opacity transform 속성을 사용하여 서서히 나타나도록 적용했습니다.
+            슬라이드 기능에서는 prependTo와 appendTo 메서드를 사용하여 마지막 항목을 맨 앞에 추가하고,
+            첫 번째 항목을 맨 뒤로 보내는 방식으로 슬라이드를 구현했습니다. animate()를
+            통해 슬라이드 이동을 부드럽게 처리하며, 화면 크기에 맞게 margin-left로 조정하였습니다.
           </p>
         </div>
 
