--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
               </div>
               <div class="project__actions">
                 <button class="project__button" data-target="2">detail</button>
-                <a href="https://younga298.github.io/project-3/" target="_blank" class="project__link">보러가기</a>
-                <!-- 404page error 수정해야함 -->
+                <a href="https://younga298.github.io/beattltude/" target="_blank" class="project__link">보러가기</a>
+
               </div>
             </li>
           </ul>
@@ -357,7 +357,7 @@
         <div class="project__header">
           <h1 class="point-font"></h1>
           <div class="project__info">
-            <p class="project__number">project#6</p>
+            <p class="project__number">project#7</p>
             <p class="project__type">웹 표준 사이트</p>
             <p class="project__separator"></p>
             <p class="project__name">The Ceramics</p>
