텍스트 수정

--- a/index.html
+++ b/index.html
@@ -508,9 +508,9 @@
           </div>
           <div class="textwrap"><i class="fa-solid fa-circle-check"></i><p> 반응형 메뉴는 PC에선 hover, 모바일에선 click으로 구분 처리했으며, 창 크기 변화에 따라 이벤트를 초기화하고 재바인딩하여 오류 없이 작동합니다.</p>
           </div>
-          <div class="textwrap"><i class="fa-solid fa-circle-check"></i><p> .off()를 활용해 이벤트 충돌을 방지하고, 모바일 메뉴 UX도 뒤로가기 흐름까지 고려해 직관적으로 개선했습니다.</p>
+          <div class="textwrap"><i class="fa-solid fa-circle-check"></i><p> .off()를 활용해 이벤트 충돌을 방지하고, 모바일 메뉴를 열였을때 뒤로가기 까지 잘 작동하도록 직관적으로 개선했습니다.</p>
           </div>
-          <div class="textwrap"><i class="fa-solid fa-circle-check"></i><p> 전체적으로 디바이스에 따라 구조와 동작이 유기적으로 변하는 점에 중점을 두고 설계한 프로젝트입니다.</p>
+          <div class="textwrap"><i class="fa-solid fa-circle-check"></i><p> 전체적으로 디바이스에 따라 레이아웃과 기능이 자연스럽게 바뀌도록 반응형 구조를 구현했습니다.</p>
           </div>
           </div>
         </div>
